# sapio

./: .gitignore  .gitmodules  404.html  CNAME  CONTRIBUTING  Cargo.toml  LICENSE  LOG  Makefile  README.md  ch00-00-introduction.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-learn-rust.html  ch01-03-hello-world.html  ch02-00-bip-119.html  ch03-00-basics.html  ch03-01-amounts.html  ch03-01-builder.html  ch03-01-guts.html  ch03-01-miniscript.html  ch03-01-timelocks.html  ch03-02-compile_if.html  ch03-02-finish.html  ch03-02-guard.html  ch03-02-guts.html  ch03-02-then.html  ch03-02-when-use-macros.html  ch03-03-declarations.html  ch03-04-compliation.html  ch03-04-continuation-effects.html  ch04-00-sapio-fun-profit.html  ch05-00-limitations.html  ch05-01-ctv-emulator.html  ch05-02-taproot.html  ch05-03-txns.html  ch05-04-gas.html  ch06-00-packaging.html  ch06-01-wasm.html  ch06-02-rust.html  (+24 more)
batching-trait/: Cargo.toml
batching-trait/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: config.rs  main.rs  plugin_handle.rs  prixfixe.rs  util.rs
cli/src/contracts/: mod.rs  request.rs  server.rs
ctv_emulators/: Cargo.toml  README.md
ctv_emulators/src/: emulator.rs  lib.rs  main.rs  msgs.rs
ctv_emulators/src/connections/: federated.rs  hd.rs  mod.rs
ctv_emulators/src/servers/: hd.rs  mod.rs
ctv_emulators/tests/: integration_test.rs
emulator-trait/: Cargo.toml  README.md
emulator-trait/src/: emulator.rs  lib.rs
examples/dcf_mining_pool/: Cargo.toml
examples/dcf_mining_pool/src/: main.rs  miner_payout.rs
integration_tests/: Cargo.toml
integration_tests/tests/: integration_test.rs
nft-trait/: Cargo.toml
plugin-example/: Cargo.toml  README.md
plugin-example/batching-trait/: Cargo.toml
plugin-example/batching-trait/src/: lib.rs
plugin-example/clause-module/: Cargo.toml
plugin-example/clause-module-trampoline/: Cargo.toml  README.md
plugin-example/clause-module-trampoline/src/: plugin.rs
plugin-example/clause-module/src/: plugin.rs
plugin-example/coin_pool/: Cargo.toml
plugin-example/coin_pool/src/: plugin.rs
plugin-example/dao/: Cargo.toml
plugin-example/fedpeg/: Cargo.toml
plugin-example/fedpeg/src/: plugin.rs
plugin-example/hanukkiah/: Cargo.toml
plugin-example/hanukkiah/src/: plugin.rs
plugin-example/helloworld/: Cargo.toml
plugin-example/helloworld/src/: plugin.rs
plugin-example/jamesob-vault/: Cargo.toml
plugin-example/jamesob-vault/src/: plugin.rs
plugin-example/nft/: Cargo.toml
plugin-example/nft-auction/: Cargo.toml
plugin-example/nft-auction/src/: plugin.rs
plugin-example/nft-sale/: Cargo.toml
plugin-example/nft-sale/src/: plugin.rs
plugin-example/nft-trait/: Cargo.toml
plugin-example/nft-trait/src/: lib.rs
plugin-example/nft/src/: plugin.rs
plugin-example/op_return_chain/: Cargo.toml
plugin-example/op_return_chain/src/: plugin.rs
plugin-example/ordinal-example/: Cargo.toml
plugin-example/ordinal-example/src/: plugin.rs
plugin-example/ordinal-inscription/: Cargo.toml
plugin-example/ordinal-inscription/src/: plugin.rs
plugin-example/payment_pool/: Cargo.toml
plugin-example/payment_pool/src/: payment_pool.rs
plugin-example/src/: plugin.rs
plugin-example/staker/: Cargo.toml
plugin-example/staker/src/: plugin.rs
plugin-example/trampolinepay/: Cargo.toml  README.md
plugin-example/trampolinepay/src/: plugin.rs
plugin-example/treepay/: Cargo.toml  README.md
plugin-example/treepay/src/: plugin.rs
plugin-example/vault/: Cargo.toml
plugin-example/vault/src/: plugin.rs
plugins/: Cargo.toml  README.md
plugins/src/: lib.rs  plugin_handle.rs
plugins/src/client/: api.rs  exports.rs  ext.rs  mod.rs  plugin.rs
plugins/src/host/: mod.rs  plugin_handle.rs  wasm_cache.rs
sapio/: CONTRIBUTING  Cargo.toml  LICENSE  README.md  contract.py  decorators.py  errors.py  opcodes.py  script_compiler.py  script_lang.py  txtemplate.py
sapio-base/: Cargo.toml  README.md
sapio-base/src/: effects.rs  lib.rs  plugin_args.rs  reverse_path.rs  serialization_helpers.rs  timelocks.rs  txindex.rs  util.rs
sapio-base/src/effects/: effect_path.rs  mod.rs  path_fragment.rs  reverse_path.rs
sapio-base/src/simp/: mod.rs
sapio-contrib/: Cargo.toml  README.md
sapio-contrib/src/: lib.rs
sapio-contrib/src/contracts/: basic_examples.rs  channel.rs  coin_pool.rs  dynamic.rs  eltoo_channel.rs  federated_sidechain.rs  hanukkah.rs  hodl_chicken.rs  mod.rs  op_return_chain.rs  readme_contracts.rs  staked_signer.rs  subscription.rs  taproot_bet.rs  tic_tac_toe.rs  treepay.rs  undo_send.rs  vault copy.rs  vault.rs
sapio-data-repr/: Cargo.toml
sapio-data-repr/src/: lib.rs
sapio-psbt/: Cargo.toml
sapio-psbt/src/: external_api.rs  lib.rs
sapio-trait/: Cargo.toml
sapio-trait/src/: lib.rs
sapio-tui/: Cargo.toml  EX
sapio-tui/src/: main.rs
sapio-tui/src/util/: event.rs  mod.rs
sapio-ws/: Cargo.toml  README.md
sapio-ws/src/: main.rs
sapio/bitcoinlib/: address.py  authproxy.py  blocktools.py  hash_functions.py  messages.py  script.py  static_types.py
sapio/contract/: __init__.py  assertions.py  bindable_contract.py  contract.py  contract_base.py  decorators.py  txtemplate.py
sapio/contract/analysis/: funds.py
sapio/contract/core/: bindable_contract.py  errors.py  txtemplate.py
sapio/examples/: airdrop.py  basic_vault.py  channel.py  main.py  multisig.py  p2pk.py  pricebet.py  readme_example.py  smarter_vault.py  subscription.py  tree_pay.py  undo_send.py
sapio/script/: clause.py  clause_to_fragment.py  compiler.py  flatten_and.py  normalize_or.py  opcodes.py  simplify.py  variable.py  witnessmanager.py
sapio/server/: api_serialization.py  main.py  ws.py
sapio/spending_conditions/: clause_to_fragment.py  compiler.py  flatten_and.py  normalize_or.py  opcodes.py  script_compiler.py  script_lang.py  witnessmanager.py
sapio/src/: clause.rs  lib.rs
sapio/src/contract/: actions.rs  compiler.rs  mod.rs  (+7 more)
sapio_macros/: Cargo.toml
sapio_macros/src/: lib.rs
simp-pack/: Cargo.toml
simp-pack/src/: lib.rs
tools/: Cargo.toml  README.md
tools/src/: lib.rs
(+427 files in other folders)
