[workspace]
members = [
    "sapio",
    "sapio-front",
    "sapio-contrib",
    "sapio-data-repr",
    "ctv_emulators",
    "sapio-base",
    "cli",
    "tools",
    "plugins",
    'emulator-trait',
    'examples/dcf_mining_pool',
    'sapio-trait',
    'sapio_macros',
    'sapio-psbt',
    'simp-pack',
]
exclude = ["plugin-example", "integration_tests"]
