[package]
name = "batching-trait"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

sapio-base.workspace = true
sapio-ctv-emulator-trait.workspace = true
sapio-trait.workspace = true
sapio-wasm-plugin.workspace = true
sapio-wasm-plugin.features = ["client"]
sapio.workspace = true

[dependencies.schemars]
version = "0.8.0"
features = ['impl_json_schema']

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
optional = true
