[package]
name = "cli"
version = "0.1.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
clap = "3.0.0-beta.2"
base64 = "0.13.0"
lazy_static = "*"
bitcoincore-rpc-async = "2.12.0"
tokio = { version = "1", features = ["full"] }
directories = "3.0.1"

[dependencies.bitcoin]
version = "^0.26.0"
features = ['use-serde', 'rand']
[dependencies.sapio]
path = "../sapio"

[dependencies.sapio-base]
path = "../sapio-base"

[dependencies.ctv_emulators]
path = "../ctv_emulators"

[dependencies.sapio-front]
path = "../sapio-front"
[dependencies.sapio-contrib]
path = "../sapio-contrib"
