[package]
name = "sapio-cli"
version = "0.1.4"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "A Command Line Interface for interacting with Sapio Contracts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
clap = "3.0.0-beta.2"
base64 = "0.13.0"
lazy_static = "1.4.0"
bitcoincore-rpc-async = "3.0.1"
tokio = { version = "1", features = ["full"] }
directories = "3.0.1"
wasmer= "1.0"
wasmer-cache = "1.0"
jsonschema-valid = "0.4.0"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^5.1.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']

[dependencies.sapio]
path = "../sapio"
version = "0.1.0"

[dependencies.sapio-base]
path = "../sapio-base"
version = "0.1.0"

[dependencies.ctv_emulators]
path = "../ctv_emulators"
version = "0.1.0"

[dependencies.sapio-front]
path = "../sapio-front"
version = "0.1.0"

[dependencies.sapio-contrib]
path = "../sapio-contrib"
version = "0.1.0"

[dependencies.sapio-wasm-plugin]
path = "../plugins"
version = "0.1.2"

features = ["host"]
