[package]
name = "sapio-cli"
version = "0.2.0"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2021"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "A Command Line Interface for interacting with Sapio Contracts"

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
clap = "=3.0.0-beta.2"
base64 = "0.13.0"
lazy_static = "1.4.0"
bitcoincore-rpc-async = "4.0.1-alpha.1"
tokio = { version = "1", features = ["full"] }
directories = "3.0.1"
rand = "^0.6"
jsonschema-valid = "0.4.0"

sapio-psbt.workspace = true
sapio.workspace = true
sapio-base.workspace = true
ctv_emulators.workspace = true
sapio-contrib.workspace = true
sapio-wasm-plugin.workspace = true
sapio-wasm-plugin.features = ["host"]

[dependencies.wasmer]
version = "4.2.5"

[dependencies.wasmer-cache]
version = "4.2.5"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde', 'rand', 'base64']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']
