[package]
name = "ctv_emulators"
version = "0.1.3"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Implementation of the CTV Emulator Trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.1"


[dependencies.sapio-ctv-emulator-trait]
path="../emulator-trait"
version = "0.1.0"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^5.1.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']

[dependencies.sapio-base]
path="../sapio-base"
version = "0.1.0"




[lib]
name = "emulator_connect"
path = "src/lib.rs"

[[bin]]
name = "emulator_server"
path = "src/bin/main.rs"
