[package]
name = "ctv_emulators"
version = "0.2.0"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2021"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Implementation of the CTV Emulator Trait"

[dependencies]
tokio = { version = "1", features = ["full"] }
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.1"

sapio-ctv-emulator-trait.workspace = true
sapio-base.workspace = true

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0-rc.3"
features = ['use-serde', 'rand']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']

[lib]
name = "emulator_connect"
path = "src/lib.rs"

[[bin]]
name = "emulator_server"
path = "src/bin/main.rs"
