[package]
name = "ctv_emulators"
version = "0.2.4"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2021"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Implementation of the CTV Emulator Trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.1"


[dependencies.sapio-ctv-emulator-trait]
path = "../emulator-trait"
version = "0.2.0"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0-rc.3"
features = ['use-serde', 'rand']

[dependencies.sapio-base]
path = "../sapio-base"
version = "0.2.0"


[lib]
name = "emulator_connect"
path = "src/lib.rs"

[[bin]]
name = "emulator_server"
path = "src/bin/main.rs"
