[package]
name = "sapio-ctv-emulator-trait"
version = "0.2.4"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2021"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Emulator Trait for mocking out CTV with other logic, trait separate to avoid pulling in tokio to compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"


[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']


[dependencies.sapio-base]
path = "../sapio-base"
version = "0.2.0"
