[package]
name = "sapio_integration_tests"
version = "0.1.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.1"

[dependencies.sapio]
path = "../sapio"

[dependencies.ctv_emulators]
path = "../ctv_emulators"

[dependencies.sapio-ctv-emulator-trait]
path="../emulator-trait"
version = "0.1.0"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^5.1.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']

[dependencies.sapio-base]
path="../sapio-base"
version = "0.1.0"

