[package]
name = "sapio_integration_tests"
version = "0.2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
sapio-miniscript = { path = '../../sapio-miniscript' }

[dependencies]
tokio = { version = "1", features = ["full"] }
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.1"
base64 = "0.13.0"

[dependencies.sapio]
path = "../sapio"

[dependencies.ctv_emulators]
path = "../ctv_emulators"

[dependencies.sapio-ctv-emulator-trait]
path = "../emulator-trait"
version = "0.2.0"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde', 'rand', 'base64']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']

[dependencies.sapio-base]
path = "../sapio-base"
version = "0.2.0"
