[package]
name = "sapio-wasm-nft-trait"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

simp-pack.workspace = true
sapio.workspace = true
sapio-base.workspace = true
sapio-wasm-plugin.workspace = true
sapio-trait.workspace = true
sapio-ctv-emulator-trait.workspace = true

[dependencies.schemars]
version = "0.8.0"
features = ['impl_json_schema']

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
optional = true
