[workspace]
members = ["treepay"
          , "trampolinepay"
          , "batching-trait"
          , "vault"
          , "staker"
          , "coin_pool"
          , "fedpeg"
          , "helloworld"
          , "op_return_chain"
          , "hanukkiah"
          , "payment_pool"
          , "jamesob-vault"]
