[workspace]
members = ["treepay"
          , "trampolinepay"
          , "batching-trait"
          , "vault"
          , "staker"
          , "coin_pool"
          , "fedpeg"
          , "helloworld"
          , "op_return_chain"
          , "hanukkiah"
          , "payment_pool"
          , "jamesob-vault"
          , "nft-trait"
          , "nft"
          , "nft-sale"
          , "nft-auction"
          , "clause-module"
          , "clause-module-trampoline"
          , "ordinal-example"]
