[package]
name = "sapio-wasm-plugin"
version = "0.2.0"
description = "Libarary for building client/host sapio plugin bindings"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["client"]
host = ["wasmer", "wasmer-cache", "tokio"]
client = ["miniscript"]

[lib]
path = "src/lib.rs"

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
base64 = "0.13.0"
hex = "0.4.3"

sapio-trait.workspace = true
sapio.workspace = true
sapio-base.workspace = true
sapio-ctv-emulator-trait.workspace = true

[dependencies.wasmer]
version = "2.2.1"
optional = true

[dependencies.wasmer-cache]
version = "2.2.1"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["full"]

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
optional = true
