[package]
name = "sapio-wasm-plugin"
version = "0.2.0"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2021"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Libarary for building client/host sapio plugin bindings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client"]
host = ["wasmer", "wasmer-cache", "tokio"]
client = ["miniscript"]

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
base64 = "0.13.0"
hex = "0.4.3"

[dependencies.sapio-trait]
version = "0.2.0"
path = "../sapio-trait"

[dependencies.wasmer]
version = "2.2.1"
optional = true

[dependencies.wasmer-cache]
version = "2.2.1"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["full"]

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']
[dependencies.sapio]
path = "../sapio"
version = "0.2.0"

[dependencies.sapio-base]
path = "../sapio-base"
version = "0.2.0"

[lib]
path = "src/lib.rs"


[dependencies.sapio-ctv-emulator-trait]
path = "../emulator-trait"
version = "0.2.0"

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
optional = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
