[package]
name = "sapio-base"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Sapio Base functionalities and trait definitions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^5.1.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']
