[package]
name = "sapio-data-repr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
jsonschema-valid = "0.5.1"
libipld = { path = "../../libipld", version = "0.15.0", features = [
    "serde-codec",
] }
serde_ipld_dagcbor = "0.2.2"
regex = "1.7.0"
schemars = "0.8.11"
serde = "1.0.147"
serde_json = "1.0.87"

[dependencies.sapio-data-repr-derive]
path = "../sapio-data-repr-derive"
