[package]
name = "sapio-trait"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
[dependencies.jsonschema]
version = "0.12"
default-features = false

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']

[dependencies.sapio-wasm-plugin]
path = "../plugins"
version = "0.1.0"
features = ["client"]