[package]
name = "sapio-trait"
version = "0.2.3"
edition = "2018"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "A programming framework for bitcoin smart contracts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
[dependencies.jsonschema]
version = "0.12"
default-features = false

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0-rc.2"
features = ['use-serde']

[dependencies.sapio-base]
path = "../sapio-base"
version = "0.2.0"
