[package]
name = "sapio-trait"
version = "0.2.3"
edition = "2021"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "A programming framework for bitcoin smart contracts."

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
