[package]
name = "sapio-ws"
version = "0.1.2"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Websocket bindings for sapio-frontend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.sapio]
path = "../sapio"
version = "0.1.0"

[dependencies.sapio-front]
path = "../sapio-front"
version = "0.1.0"

[dependencies.sapio-contrib]
path = "../sapio-contrib"
version = "0.1.0"

[dependencies.actix-web]
version= "3"

[dependencies.actix]
version = "0.10.0"
[dependencies.actix-web-actors]
version = "3.0.0"


[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']
