[package]
name = "sapio"
version = "0.1.2"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "A programming framework for bitcoin smart contracts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.miniscript]
package = "sapio-miniscript"
version = "^5.1.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']

[features]
# used to enable some niceties if compiling on a nightly compiler
nightly = []

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
paste = "1.0"
base64 = "0.13.0"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0"

[dependencies.schemars]
version = "0.8.5"
features = ['impl_json_schema', 'derive']

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']


[dependencies.sapio-base]
path = "../sapio-base"
version = "0.1.0"

[dependencies.sapio-ctv-emulator-trait]
path ="../emulator-trait"
version = "0.1.0"
