[package]
name = "sapio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
# used to enable some niceties if compiling on a nightly compiler
nightly = []

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
paste = "1.0"
base64 = "0.13.0"
lazy_static = "1.4.0"

sapio-base.workspace = true
sapio-ctv-emulator-trait.workspace = true
sapio_macros.workspace = true

[dependencies.serde]
version = "1.0"

[dependencies.schemars]
version = "0.8.5"
features = ['impl_json_schema', 'derive']

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
