[package]
name = "sapio_macros"
version = "0.2.2"
edition = "2021"
license = "MPL-2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "A programming framework for bitcoin smart contracts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
