[package]
name = "simp-pack"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sapio-lang/sapio"
homepage = "https://sapio-lang.org"
description = "Starter Pack of Sapio Interactive Metadata Protocols; currently non-standardized"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
[dependencies.sapio-base]
path = "../sapio-base"
version = "0.2.0"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']
