[package]
name = "dcf_mining_pool"
version = "0.2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
bitcoincore-rpc-async = "4.0.1-alpha.1"


[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0-rc.2"
features = ['use-serde', 'rand']
[dependencies.sapio]
path = "../../sapio"
version = "0.2.0"

[dependencies.sapio-base]
path = "../../sapio-base"
version = "0.2.0"



[dependencies.sapio-ctv-emulator-trait]
path="../../emulator-trait"
version = "0.2.0"

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0-0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']
optional = true

