[package]
name = "dcf_mining_pool"
version = "0.2.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2021"
publish = false

[dependencies]
schemars = "0.8.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
bitcoincore-rpc-async = "4.0.1-alpha.1"

sapio.workspace = true
sapio-base.workspace = true
sapio-ctv-emulator-trait.workspace = true

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde', 'rand']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']
optional = true
