[package]
name = "batching-trait"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.schemars]
version = "0.8.0"
features = ['impl_json_schema']

[dependencies.wasm-bindgen]
version = "0.2.69"

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "^0.26.0"
features = ['use-serde', 'rand']
[dependencies.sapio]
path = "../../sapio"
version = "0.1.2"

[dependencies.sapio-base]
path = "../../sapio-base"
version = "0.1.0"


[dependencies.sapio-trait]
path="../../sapio-trait"
version = "0.1.0"

[dependencies.sapio-ctv-emulator-trait]
path="../../emulator-trait"
version = "0.1.0"

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^5.1.0"
features = ['compiler', 'use-serde', 'rand', 'use-schemars', 'serde']
optional = true

